2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: clean this a bit

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: updated to intltoolize the policy.in file
	* gnome-clock-applet-mechanism.policy: moved...
	* gnome-clock-applet-mechanism.policy.in: ... here, and mark strings
	as translatable
	Fix bug #510635. Patch by Luca Ferretti <elle.uca@libero.it>

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: define where Locations.xml is (via pkg-config)
	* gweather-xml.c: (gweather_xml_load_locations): updated for the
	change
	Fix bug #509888.
	Patch by Patryk Zawadzki <patrys@pld-linux.org>

2008-01-28  Vincent Untz  <vuntz@gnome.org>

	* calendar-window.c: (create_hig_frame): fix compilation when there's
	no eds support. Fix bug #509840.
	Patch by Saleem Abdulrasool <compnerd@compnerd.org>

2008-01-25  Matthias Clasen  <mclasen@redhat.com>

	* clock.schemas.in: Add list_type for cities.

2008-01-20  Christian Persch  <chpe@gnome.org>

	* Makefile.am: Add --internal when generating the marshalers.

2008-01-16  Christian Persch  <chpe@gnome.org>

	* clock.glade: Fix minor HIGness problems in Prefs dialogue (spacings,
	missing mnemonics).

2008-01-16  Matthias Clasen <mclasen@redhat.com>

	* Makefile.am (EXTRA_DIST): This must not depend on 
	HAVE_POLKIT unless the maintainer remembers to only ever
	distcheck on systems with a new enough PolicyKit.

2008-01-16  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Fix a typo that broke the build.

2008-01-15  Carlos Garcia Campos  <carlosgc@gnome.org>

	* Makefile.am: Add -DGWEATHER_I_KNOW_THIS_IS_UNSTABLE. Fixes bug
	#509581.	
	
==================== 2.21.5 ====================

2008-01-14  Federico Mena Quintero  <federico@novell.com>

	* clock.c: Don't include langinfo.h.

2008-01-07  Federico Mena Quintero  <federico@novell.com>

	* clock.c (fill_prefs_window): Use
	gweather_prefs_get_*_display_name() instead of pulling
	translations from another module.
