@@ -8,8 +8,8 @@
 <policyconfig>
 
   <action id="org.gnome.clockapplet.mechanism.settimezone">
-    <_description>Change system time zone</description>
-    <_message>Changing the system time zone requires privileges.</message>
+    <_description>Change system time zone</_description>
+    <_message>Changing the system time zone requires privileges.</_message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>auth_self_keep_always</allow_active>
@@ -17,8 +17,8 @@
   </action>
 
   <action id="org.gnome.clockapplet.mechanism.settime">
-    <_description>Change system time</description>
-    <_message>Changing the system time requires privileges.</message>
+    <_description>Change system time</_description>
+    <_message>Changing the system time requires privileges.</_message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>auth_self_keep_always</allow_active>
@@ -26,8 +26,8 @@
   </action>
 
   <action id="org.gnome.clockapplet.mechanism.configurehwclock">
-    <_description>Configure hardware clock</description>
-    <_message>Configuring the hardware clock requires privileges.</message>
+    <_description>Configure hardware clock</_description>
+    <_message>Configuring the hardware clock requires privileges.</_message>
     <defaults>
       <allow_inactive>no</allow_inactive>
       <allow_active>auth_self_keep_always</allow_active>
