@@ -1,3 +1,7 @@
+2008-01-28  Luca Ferretti  <elle.uca@libero.it>
+
+	* gnome-clock-applet-mechanism.policy.in: fix my broken patch...
+
 2008-01-28  Vincent Untz  <vuntz@gnome.org>
 
 	* Makefile.am: clean this a bit
